2010-03-21  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.c (i386_error): Replace oprand_size_mismatch
	with operand_size_mismatch.
	(operand_size_match): Updated.
	(match_template): Likewise.

2010-03-21  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.c (i386_error): New.
	(_i386_insn): Replace err_msg with error.
	(operand_size_match): Set error instead of err_msg on failure.
	(operand_type_match): Likewise.
	(operand_type_register_match): Likewise.
	(VEX_check_operands): Likewise.
	(match_template): Likewise.  Use error instead of err_msg with
	as_bad.

2010-03-19  Jie Zhang  <jie@codesourcery.com>

	* config/tc-arm.c (make_mapping_symbol): Hanle the case
	that two mapping symbols have the same value.

2010-03-18  Daniel Jacobowitz  <dan@codesourcery.com>

	* doc/c-arm.texi (.setfp): Correct example.

2010-03-18  Wei Guozhi  <carrot@google.com>

	PR gas/11323
	* config/tc-arm.c (reloc_names): New relocation names.
	(md_apply_fix): New case for BFD_RELOC_ARM_GOT_PREL.
	(tc_gen_reloc): New case for BFD_RELOC_ARM_GOT_PREL.
	* doc/c-arm.texi (ARM-Relocations): Document the new relocation.

2010-03-15  Thomas Schwinge  <thomas@codesourcery.com>

	* dw2gencfi.c (output_cie): Consider emitting the S augmentation in all
	cases, and not only for .eh_frame.

	* dw2gencfi.c (output_cie): Make it more explicit which code paths
	belong to .eh_frame only.

2010-03-13  Segher Boessenkool  <segher@kernel.crashing.org>

	* config/tc-v850.c (v850_insert_operand): Handle out-of-range
	assembler constants on 64-bit hosts.

2010-03-10  Mike Frysinger  <michael.frysinger@analog.com>

	* bfin-defs.h, bfin-lex.l, bfin-parse.y, tc-bfin.c, tc-bfin.h:
	Strip trailing whitespace.

2010-03-10  Mike Frysinger  <michael.frysinger@analog.com>

	* doc/c-bfin.texi (-mcpu): Add bf504 and bf506.
	* config/tc-bfin.c (bfin_cpu_type): Add BFIN_CPU_BF504 and
	BFIN_CPU_BF506.
	(bfin_cpus[]): Add 0.0 for bf504 and bf506.

2010-03-10  Jie Zhang  <jie@codesourcery.com>
